--- a/application/app/src/main/res/layout/activity_main.xml
+++ b/application/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/password_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
