--- a/application/app/src/main/res/layout/activity_profile.xml
+++ b/application/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="150dp"
         android:layout_marginBottom="581dp"
-        android:background="#FF981A"
+        android:background="#ff981a"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -28,7 +28,7 @@
         android:background="@drawable/profile_wave"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintHorizontal_bias="0.441"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:layout_constraintVertical_bias="0.0" />
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_profile"
         android:layout_width="214dp"
         android:layout_height="51dp"
         android:layout_marginTop="4dp"
@@ -79,10 +79,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/password_view" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/name_view"
         android:layout_width="318dp"
         android:layout_height="34dp"
         android:layout_marginTop="8dp"
@@ -99,7 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/rollno_view"
         android:layout_width="318dp"
         android:layout_height="34dp"
         android:layout_marginTop="88dp"
@@ -116,7 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/email_view"
         android:layout_width="318dp"
         android:layout_height="34dp"
         android:layout_marginTop="132dp"
@@ -133,7 +133,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/password_view"
         android:layout_width="318dp"
         android:layout_height="34dp"
         android:layout_marginTop="172dp"
@@ -148,7 +148,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/branch_view"
         android:layout_width="318dp"
         android:layout_height="34dp"
         android:layout_marginTop="48dp"
@@ -174,12 +174,12 @@
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button_profile" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_width="410dp"
-        android:layout_height="135dp"
+        android:layout_width="411dp"
+        android:layout_height="134dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
