--- a/application/app/src/main/res/layout/activity_login.xml
+++ b/application/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,6 @@
     android:id="@+id/noacc"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
     tools:context=".MainActivity">
 
     <View
@@ -85,7 +84,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
         <TextView
-            android:id="@+id/password_view"
+            android:id="@+id/tv_forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
@@ -97,11 +96,12 @@
 
         <Button
             android:id="@+id/loginb"
-            android:layout_width="186dp"
-            android:layout_height="48dp"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
             android:layout_marginTop="96dp"
-            android:background="@drawable/bg"
             android:text="@string/or"
+            android:fontFamily="@font/lato"
+            android:backgroundTint="@color/black"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
@@ -125,7 +125,6 @@
             android:layout_width="185dp"
             android:layout_height="48dp"
             android:layout_marginTop="24dp"
-            android:background="@drawable/bg"
             android:text="@string/register"
             app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
@@ -143,36 +142,16 @@
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
             app:layout_constraintTop_toBottomOf="@+id/register" />
 
-        <View
-            android:id="@+id/view3"
-            android:layout_width="0dp"
-            android:layout_height="10dp"
-            android:background="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/or"
-            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/or"
-            app:layout_constraintTop_toTopOf="@+id/or" />
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="0dp"
-            android:layout_height="10dp"
-            android:background="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/or"
-            app:layout_constraintEnd_toStartOf="@+id/or"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-            app:layout_constraintTop_toTopOf="@+id/or" />
 
         <Button
             android:id="@+id/woacc"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginTop="28dp"
-            android:background="@drawable/bg"
             android:text="@string/continue_without_account"
             android:textColor="@color/white"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/lato"
             app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
             app:layout_constraintTop_toBottomOf="@+id/or" />
