--- a/application/app/src/main/res/values/colors.xml
+++ b/application/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="darkergrey">#3C3A3A</color>
     <color name="perfectgrey">#6C6868</color>
     <color name="green">#108E16</color>
+    <color name="blue">#0066FF</color>
 </resources>
