--- a/application/app/src/main/res/layout/activity_registration.xml
+++ b/application/app/src/main/res/layout/activity_registration.xml
@@ -7,72 +7,69 @@
     android:background="@color/white">
 
     <TextView
-        android:id="@+id/create_account_text"
+        android:id="@+id/text_view_create_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="52dp"
         android:fontFamily="@font/lato"
         android:text="Create New Account"
         android:textColor="	#696969"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <EditText
-        android:id="@+id/user_name"
+        android:id="@+id/edit_text_register_email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="72dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="40dp"
-        android:fontFamily="@font/lato"
-        android:hint="Name"
-        app:layout_constraintTop_toBottomOf="@+id/create_account_text" />
-
-    <EditText
-        android:id="@+id/user_email"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="40dp"
         android:layout_marginRight="40dp"
         android:fontFamily="@font/lato"
         android:hint="Email"
-        app:layout_constraintTop_toBottomOf="@+id/user_name" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_register_student_id" />
 
     <EditText
-        android:id="@+id/user_password"
+        android:id="@+id/edit_text_register_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="76dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="40dp"
         android:layout_marginRight="40dp"
         android:fontFamily="@font/lato"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/user_email" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_register_email"
+        tools:layout_editor_absoluteX="0dp" />
 
     <EditText
-        android:id="@+id/confirm_password"
+        android:id="@+id/edit_text_register_student_id"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="40dp"
         android:layout_marginTop="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:fontFamily="@font/lato"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/user_password" />
+        android:hint="Student ID"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_create_account" />
 
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/button_register"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginBottom="184dp"
         android:background="@drawable/roundedbutton"
         android:backgroundTint="@color/black"
         android:fontFamily="@font/lato"
@@ -83,11 +80,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
-        app:layout_constraintVertical_bias="0.391" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_register_password"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/account_exists_text"
+        android:id="@+id/text_view_account_exists"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
@@ -96,8 +93,9 @@
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_button" />
+        app:layout_constraintTop_toBottomOf="@+id/button_register"
+        app:layout_constraintVertical_bias="0.559" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
